# poe2-macro-buddy

./: .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md  RELEASE_NOTES.md  config.example.yaml  justfile  package.json  setup-icons.ps1
src/: config.rs  lib.rs  macro_engine.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cli.rs  commands.rs  config.rs  macro_engine.rs  main.rs
ui/: index.html  package.json  vite.config.ts
ui/src/: App.tsx
ui/src/components/: KeyboardMap.tsx  LoadingScreen.tsx  MacroConfig.tsx  MouseButtonSelector.tsx  StatusMonitor.tsx
ui/src/lib/: tauri.ts
