[workspace]
members = [".", "src-tauri"]
resolver = "2"

[package]
name = "poe2-macro-buddy"
version = "0.1.0"
edition = "2021"
authors = ["Hal <hal.long@outlook.com>"]
description = "A compliant low-frequency keyboard macro tool for Path of Exile 2"
license = "MIT"
repository = "https://github.com/loonghao/poe2-macro-buddy"
keywords = ["poe2", "macro", "gaming", "automation", "keyboard"]
categories = ["games", "command-line-utilities"]

[lib]
name = "poe2_macro_buddy"
path = "src/lib.rs"

[[bin]]
name = "poe2-macro-buddy"
path = "src/main.rs"

[dependencies]
enigo = "0.2"
device_query = "2.1"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"

# Workspace metadata for unified commands
[workspace.metadata.scripts]
# Development commands
dev-cli = "cargo run --bin mouse_macro"
dev-gui = "cd ui && npm install && npm run tauri dev"

# Build commands
build-cli = "cargo build --release --bin mouse_macro"
build-gui = "cd ui && npm install && npm run tauri build"
build-all = "cargo build --release && cd ui && npm install && npm run tauri build"

# Test commands
test-cli = "cargo test"
test-gui = "cd ui && npm test"

# Clean commands
clean = "cargo clean && cd ui && rm -rf node_modules dist"
