[package]
name = "poe2-macro-buddy"
version = "0.1.0"
description = "A compliant low-frequency keyboard macro tool for POE2 with GUI"
authors = ["Hal <hal.long@outlook.com>"]
license = "MIT"
repository = "https://github.com/loonghao/poe2-macro-buddy"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
enigo = "0.2"
device_query = "2.1"
rand = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

